<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="288dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewCourse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/course"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <TextView
            android:id="@+id/textViewYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#40484A"
            android:layout_marginLeft="220dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewIntakeT"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/intake" />

            <TextView
                android:id="@+id/textViewEnrollmentT"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/enrollment" />

            <TextView
                android:id="@+id/textViewGraduatesT"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/graduates" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewIntake"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_1"
                android:textColor="#03ab28"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textViewEnrollment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_12"
                android:textColor="#11309e"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textViewGraduates"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_123"
                android:textColor="#9009bd"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageViewGender"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:scaleType="fitStart"
        android:layout_marginLeft="20dp"
        tools:srcCompat="@tools:sample/avatars" />
</LinearLayout>